# tts_creator

./: README.md  conv_videos.py  pyproject.toml  speaker_diarization.py  transcribe_audio.py
notebooks/: count_bollocks.ipynb  denoising.ipynb  diarization.ipynb  extract_data.ipynb  transcribe_audio.ipynb  translate_audio.ipynb
src/features/: preprocessing.py
